Works, it is just slow. Have two different starting grids that can be selected.

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,11 +1,12 @@
 /* some style */
 .grid {
+	border: 1px solid black;
 }
 
 .square {
 	float: left;
-	width: 10px;
-	height: 10px;
+	width: 5px;
+	height: 5px;
 	margin: 0px;
 }
 
